samples/_failures_safe/1761690344_469534_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_62489e11.c: In function ‘main’:
./samples/SAFE/__tmp_62489e11.c:151:17: error: expected ‘;’ at end of input
  151 |         return 1
      |                 ^
      |                 ;
./samples/SAFE/__tmp_62489e11.c:151:9: error: expected declaration or statement at end of input
  151 |         return 1
      |         ^~~~~~
./samples/SAFE/__tmp_62489e11.c:151:9: error: expected declaration or statement at end of input
